Add network routes distribution groups
Updated API and account manager methods

Updated tests
